--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   elliptic: ^0.3.11
   decimal: ^3.1.0
   tuple: ^2.0.0  # Check for the latest version on pub.dev
+  sss256: ^1.0.0  # Shamir's Secret Sharing Scheme
   eciesdart:
     git:
       url: https://github.com/c3qtech/eciesdart.git
